# ML_tek5

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/day_1/1_linear_regression/1D_linear_regression/: create_data.py  main_all.py  main_create_data.py  main_optimal_params.py  main_polynomial_regression.py  main_random_params.py  main_scikit.py  utils.py  utils_files.py
code/day_1/1_linear_regression/dD_linear_regression/: generate_data.py  optuna_ridge_scikit.py
code/day_1/2_numpy_demo/: numpy_demo.ipynb
code/day_1/3_distributions/: analyze_distribution_3.py  generate_bernoulli.py  generate_bimodal_solution.py  generate_normal_2.py  generate_uniform_continuous.py  generate_uniform_discrete.py
code/day_1/3_distributions/csv_files/: distribution_1.csv
code/day_1/4_metrics/cosine_similarity/texts/: Antoine Griezmann.txt  Karim Benzema.txt
code/day_1/4_metrics/geometric_data/: build_graphs_geometric_data.ipynb
